--- a/tos.html
+++ b/tos.html
@@ -41,7 +41,7 @@
 <body>
     <div class="container">
         <h1>Termini di Servizio di Rex Bot</h1>
-        <p class="last-updated">Ultimo aggiornamento: [Data]</p>
+        <p class="last-updated">Ultimo aggiornamento: 1 Luglio 2024 </p>
 
         <h2>1. Descrizione del Servizio</h2>
         <p>Rex Bot è un bot Discord che fornisce funzionalità di moderazione e di gioco per i server Discord. Le funzionalità includono, ma non si limitano a, gestione dei messaggi, controllo degli utenti, comandi di gioco, e altro ancora.</p>
