--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rex Bot</title>
     <style>
         body {
+            background-image: url('background.jpg');
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
